# prompt

./: Cargo.toml  Makefile  README.md  build.js  config.yaml  example-tool.sh  go.mod  go.sum  package-lock.json  package.json  setup.sh  test.txt  zsh-prompt.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: test.rs
cli/src/commands/setup/: input_prompt.rs  mod.rs  validators.rs
cli/src/util/: mod.rs
cmd/: main.go
internal/: config.go  message.go  util.go
internal/model/: bedrock.go  bedrock_test.go  model.go
internal/tool/: tool.go  tool_test.go
node/bedrock-test/: esbuild.ts  main.ts  out.js  package-lock.json  package.json  test.js
node/bedrock-test/src/: index.ts
plugins/: facts.js  top_song.js
prompt_core/: Cargo.toml
prompt_core/src/: lib.rs
prompt_core/src/config/: mod.rs
prompt_core/src/javascript_engine/: mod.rs  util.rs
prompt_core/src/javascript_engine/modules/: console.rs  mod.rs  require.rs
prompt_core/src/plugin/: mod.rs
prompt_core/src/provider/: mod.rs
prompt_core/tests/: config_test.rs  javascript_engine_test.rs  plugin_configure_method_test.rs  plugin_test_method_test.rs  provider_test.rs
prompt_core/tests/config/: test-config.yml
prompt_core/tests/config/populated/: config.yml
prompt_core/tests/model-plugin/configure-method/: simple.js
prompt_core/tests/model-plugin/test-method/: invalid-js.js  no-test-method.js  simple.js  test-method-throws.js
src/: config.ts  main.ts  tool.ts  util.ts
src/model/: bedrock.ts  index.ts  model.ts
src/model/bedrock/: helpers.ts  (+3 more)
zsh/prompt/: prompt.plugin.zsh
(+5 files in other folders)
